src/components/challenge-32/index.scss
/* ... */
@mixin conic-bg($color1, $color2: null, $color3: null, $color4: null, $color5: null, $start: 0, $scale: 100) {
  // creates a conic-gradient with hard stops equally distributed between each color (up to 5 colors)
  @if $color5 {
    background: conic-gradient(
      from #{$start}turn,
      $color1 0%, $color1 ($scale / 5) * 1%,
      $color2 ($scale / 5) * 1%, $color2 (2 * $scale / 5) * 1%,
      $color3 (2 * $scale / 5) * 1%, $color3 (3 * $scale / 5) * 1%,
      $color4 (3 * $scale / 5) * 1%, $color4 (4 * $scale / 5) * 1%,
      $color5 (4 * $scale / 5) * 1%, $color5 $scale * 1%);
  } @else if $color4 {
    background: conic-gradient(
      from #{$start}turn,
      $color1 0, $color1 ($scale / 4) * 1%,
      $color2 ($scale / 4) * 1%, $color2 (2 * $scale / 4) * 1%,
      $color3 (2 * $scale / 4) * 1%, $color3 (3 * $scale / 4) * 1%,
      $color4 (3 * $scale / 4) * 1%, $color4 $scale * 1%);
  } @else if $color3 {
    background: conic-gradient(
      from #{$start}turn,
      $color1 0%, $color1 ($scale / 3) * 1%,
      $color2 ($scale / 3) * 1%, $color2 (2 * $scale / 3) * 1%,
      $color3 (2 * $scale / 3) * 1%, $color3 $scale * 1%);
  } @else if $color2 {
    background: conic-gradient(
      from #{$start}turn,
      $color1 0%, $color1 ($scale / 2) * 1%,
      $color2 ($scale / 2) * 1%, $color2 $scale * 1%);
  } @else {
    background-color: $color1;
  }
}

.mana-symbol {
  border-color: black;
  border-style: solid;
  border-radius: 50%;
  position: absolute;
  user-select: none;
}

.dot {
  border-color: black;
  border-style: solid;
  border-radius: 50%;
  position: absolute;
}

.white-mana,
.white-mana.deck .background {
  background-color: $white;

  &.deck {
    --mono-color-rotation: 0deg;
  }
}

.blue-mana,
.blue-mana.deck .background {
  background-color: $blue;

  &.deck {
    --mono-color-rotation: 72deg;
  }
}

.black-mana,
.black-mana.deck .background {
  background-color: $black;

  &.deck {
    --mono-color-rotation: 144deg;
  }
}

.red-mana,
.red-mana.deck .background {
  background-color: $red;

  &.deck {
    --mono-color-rotation: 216deg;
  }
}

.green-mana,
.green-mana.deck .background {
  background-color: $green;

  &.deck {
    --mono-color-rotation: 288deg;
  }
}

div.white-mana.deck,
div.blue-mana.deck,
div.black-mana.deck,
div.red-mana.deck,
div.green-mana.deck {
  visibility: hidden;
  background-color: black;
  clip-path: url(#petal);
  z-index: -1;

  .background,
  .border,
  .image {
    width: 100%;
    height: 100%;
    transform: scale(.95);
    clip-path: url(#petal);
  }

  .border {
    background-color: black;
  }

  .image {
    background-position: center top;
    background-size: cover;
  }

  &.background {
    visibility: visible;
    transition: transform .5s cubic-bezier(.5, 0, .6, 2);
  }
}

.colorless-mana,
.any-type {
  background-color: $colorless;

  &.deck {
    border-radius: 50%;
    border-style: solid;
    border-color: black;

    .background,
    .image {
      width: 100%;
      height: 100%;
      transform: scale(.95);
      border-radius: 50%;
    }

    .background {
      background-color: black;
    }

    .image {
      background-position: center top;
      background-size: cover;

      & + .image {
        clip-path: polygon(50% 0, 100% 0, 100% 100%, 50% 100%);
      }
    }

    span {
      position: absolute;
      display: block;
      width: 100%;
      left: 0;
      top: 0;
    }
  }
}

.any-type.deck .background {
  transform: scale(1);
}

#content {
  position: relative;
  transform: scale(.85);
  left: 5vh;
  top: 3vh;
}

.deck,
.image {
  position: absolute;
  cursor: pointer;
}

.ally,
.wedge {
  clip-path: polygon(0 0, 100% 0, 50% 100%);
  transform-origin: top left;

  .background,
  .border,
  .image {
    clip-path: polygon(0 0, 100% 0, 50% 100%);
  }
}

.shard {
  clip-path: polygon(0 100%, 50% 0, 100% 100%);
  transform-origin: top center;

  .background,
  .border,
  .image {
    clip-path: polygon(0 100%, 50% 0, 100% 100%);
  }

  .border,
  .image {
    transform-origin: 50% 70%;
  }
}

.enemy {
  clip-path: polygon(0 0, 100% 0, 63.85% 100%, 36.15% 100%);
  transform-origin: top left;

  .background,
  .border,
  .image {
    clip-path: polygon(0 0, 100% 0, 63.85% 100%, 36.15% 100%);
  }
}

.ally,
.wedge,
.shard,
.enemy,
.four-color,
.pentacolor {
  background-color: black;

  .background,
  .border,
  .image {
    width: 100%;
    height: 100%;
    transform: scale(.95);
  }

  .border {
    background-color: black;
    visibility: hidden;
  }

  .image {
    background-position: center top;
    background-size: cover;
  }
}

// Allied guilds
.azorius {
  transform: rotate(36deg);

  .background {
    @include gradient-bg($white, $blue);
  }
}

.dimir {
  transform: rotate(108deg);

  .background {
    @include gradient-bg($blue, $black);
  }
}

.rakdos {
  transform: rotate(180deg);

  .background {
    @include gradient-bg($black, $red);
  }
}

.gruul {
  transform: rotate(252deg);

  .background {
    @include gradient-bg($red, $green);
  }
}

.selesnya {
  transform: rotate(324deg);

  .background {
    @include gradient-bg($green, $white);
  }
}

.dimir,
.rakdos,
.gruul {
  .image {
    transform: scale(-1);
    clip-path: polygon(0 100%, 100% 100%, 50% 0);
  }
}

// Khans wedges
.jeskai {
  transform: rotate(36deg) scaleY(-1);

  .background {
    @include gradient-bg($white, $red, $blue);
  }
}

.sultai {
  transform: rotate(108deg) scaleY(-1);

  .background {
    @include gradient-bg($blue, $green, $black);
  }
}

.mardu {
  transform: rotate(180deg) scaleY(-1);

  .background {
    @include gradient-bg($black, $white, $red);
  }
}

.temur {
  transform: rotate(252deg) scaleY(-1);

  .background {
    @include gradient-bg($red, $blue, $green);
  }
}

.abzan {
  transform: rotate(324deg) scaleY(-1);

  .background {
    @include gradient-bg($green, $black, $white);
  }
}
/* ... */

